  ConditionType is now Condition.Type
  ConditionSet is now Condition.Set
0.10.7
  PropertyConditionModelProvider refactored to get rid of wildcard return type
  Sonar run
  Property.SearchableProperty removed
  FilteredComboBoxModel.setContents(), removed a couple of wildcard types
  Item is now final
  EntityTableConditionModel.setConditionValues() removed wildcard type
  MasterDetailPanel.getDetailPanels() removed wildcard type
  Floating point comparison now done with Double.compare()
  Condition now Column based, Condition.getValueKeys() renamed to getColumns()
0.10.8
  ValueMap keys now restricted to Attribute plus associated changes
  TaskScheduler and DaemonThreadFactory moved to org.jminor.common to remove cyclical dependency between common.db and common.model
  DefaultProperty, some minor refactoring around PropertyResultPacker
  UiUtil.createMemoryUsageField() is now based on a TaskScheduler
  UiUtil.runWithProgressBar() is now based on a SwingWorker
  Properties.DefaultForeignKeyProperty constructor now takes an array of ColumnProperty instead of String, properties instead of property IDs
  DefaultEntity.initializeReferencedKey() bug fixed, wrong generic type of Map resulted in the single value key constructor being called for composite keys
  DoubleInputProviderTest improved
  IntInputProvider renamed to IntegerInputProvider for consistency
  EntityTablePanel.getUpdateSelectedControlSet(), enabled state is now based on both selection and the allowUpdate state of the edit model
  DefaultValueMapValidator moved to DefaultValueMap.DefaultValidator
  EntityTableConditionModel, additionalFilterCondition field added
  LocalEntityConnection bug fixed, selectRowCount() did not work with group by
  h2 library updated
  Shared library versions consolidated to build.properties
  Sonar run
  DefaultProperty.prepareValue() moved to DefaultEntity
  UiUtil.runWithProgressBar() now handles InterruptedException correctly
  User.UNIT_TEST_USER field removed