@@ -4348,3 +4348,5 @@
   DefaultProperty.prepareValue() moved to DefaultEntity
   UiUtil.runWithProgressBar() now handles InterruptedException correctly
   User.UNIT_TEST_USER field removed
+  SwingEntityTableModel.performQuery() condition parameter removed
+  FXEntityListModel.queryContents() renamed to performQuery() for consistency
